# tail_clone

./: .gitignore  CMakeLists.txt  README.md  cmakelists.txt  logger.py  tailclone  test.sh  test.txt
inc/: arg_parser.h  stream_contents.h  tail_clone_config.h.in
src/: arg_parser.cpp  stream_contents.cpp  tail.cpp  tail_clone.cpp
